--- a/contact.html
+++ b/contact.html
@@ -16,5 +16,136 @@
         <h1 class="text-7xl text-center font-bold font-barlow uppercase">
             Contact Us
         </h1>
+        <section class="w-full relative bg-purpleBright text-white">
+            <!-- Background Image -->
+            <div
+                class="w-full h-[600px] bg-yellowSecondary relative bg-cover bg-center"
+            >
+                <!-- <img
+                    src="./src/images/hero-bg.png"
+                    alt=""
+                    class="w-full h-[600px] object-cover"
+                /> -->
+
+                <div
+                    class="absolute z-101 bottom-0 top-0 bg-purpleBright w-full pt-[8rem] h-full"
+                >
+                    <!-- Transparent Background Container -->
+                    <div class="w-full">
+                        <!-- WELCOME TEXT -->
+                        <div class="px-8 xl:px-40">
+                            <h1
+                                class="text-[38px] font-barlow font-bold lg:text-7xl"
+                            >
+                                Welcome To Our New Home
+                            </h1>
+                            <p class="font-manrope pt-4 md:w-2/4 lg:w-1/3">
+                                Where Champions are Forged. Dreams Take FLight
+                                and the Spirit of Football Soars!
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- INDICATORS -->
+                    <div
+                        class="w-full h-20 mt-[2rem] justify-between items-center px-8 xl:px-40 lg:flex"
+                    >
+                        <!-- INDICATORS CONTAINER -->
+                        <div class="flex items-center space-x-4">
+                            <div
+                                class="w-[12px] h-[12px] bg-grayDarker rounded-full hover:bg-white cursor-pointer"
+                            ></div>
+                            <div
+                                class="w-[12px] h-[12px] bg-grayDarker rounded-full hover:bg-white cursor-pointer"
+                            ></div>
+                            <div
+                                class="w-[12px] h-[12px] bg-grayDarker rounded-full hover:bg-white cursor-pointer"
+                            ></div>
+                        </div>
+                        <!-- PREV & NEXT BUTTONS -->
+                        <div class="hidden space-x-2 lg:flex items-center">
+                            <div
+                                class="prev w-[60px] h-[54px] bg-grayDarker rounded px-[18px] py-[15px] text-black hover:bg-white cursor-pointer"
+                            >
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    stroke-width="1.5"
+                                    stroke="currentColor"
+                                    class="w-6 h-6"
+                                >
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        d="M15.75 19.5 8.25 12l7.5-7.5"
+                                    />
+                                </svg>
+                            </div>
+                            <div
+                                class="next w-[60px] h-[54px] bg-grayDarker rounded px-[18px] py-[15px] text-black hover:bg-white cursor-pointer"
+                            >
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    stroke-width="1.5"
+                                    stroke="currentColor"
+                                    class="w-6 h-6"
+                                >
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        d="m8.25 4.5 7.5 7.5-7.5 7.5"
+                                    />
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- MATCH PREVIEW -->
+            <div
+                class="scrollContainer absolute -bottom-[25%] overflow-x-scroll no-scrollbar flex w-full mt-[1rem] pl-8 lg:pr-8 xl:px-40 xl:bottom-[5%]"
+            >
+                <div
+                    class="min-w-[456px] h-[151px] bg-yellowSecondary rounded-l text-purplePrimary px-8 py-4"
+                >
+                    <h2 class="uppercase text-[20px] font-semibold font-barlow">
+                        Match Review
+                    </h2>
+                    <p class="text-[16px] font-manrope">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Expedita hic animi consequatur cumque laborum
+                        ratione dolores similique architecto excepturi quos
+                    </p>
+                </div>
+                <div
+                    class="min-w-[456px] h-[151px] bg-yellowSecondary border-l-2 border-r-2 border-purplePrimary text-purplePrimary px-8 py-4"
+                >
+                    <h2 class="uppercase text-[20px] font-semibold font-barlow">
+                        Match Review
+                    </h2>
+                    <p class="text-[16px] font-manrope">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Expedita hic animi consequatur cumque laborum
+                        ratione dolores similique architecto excepturi quos
+                    </p>
+                </div>
+                <div
+                    class="min-w-[456px] h-[151px] bg-yellowSecondary rounded-r text-purplePrimary px-8 py-4"
+                >
+                    <h2 class="uppercase text-[20px] font-semibold font-barlow">
+                        Match Review
+                    </h2>
+                    <p class="text-[16px] font-manrope">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Expedita hic animi consequatur cumque laborum
+                        ratione dolores similique architecto excepturi quos
+                    </p>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
