--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="src/main.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -13,11 +13,11 @@
         <title>Eagle City FC</title>
     </head>
     <body class="w-full">
-        <!-- NAV -->
+        <!-- ============== NAV SECTION ======================== -->
         <nav class="relative w-full bg-purplePrimary">
             <!-- NAV FLEX CONTAINER -->
             <div
-                class="px-8 py-[20px] flex items-center justify-between mx-auto w-full xl:px-40 lg:pt-16 lg:pb-8"
+                class="px-4 py-[20px] flex items-center justify-between mx-auto w-full lg:px-8 xl:px-20 lg:pt-16 lg:pb-8"
                 id="hideNav"
             >
                 <div class="flex items-center">
@@ -166,123 +166,158 @@
                 </div>
             </div>
         </nav>
-        <!-- HERO SECTION -->
+        <!-- ============== HERO SECTION ======================= -->
         <section
-            class="relative w-full h-[430px] bg-hero-bg bg-no-repeat bg-cover bg-center text-white pt-[8rem] lg:pt-[10rem] lg:h-[458px] xl:h-[600px]"
+            class="w-full h-[430px] relative bg-yellowSecondary bg-cover lg:h-[700px]"
+            style="background-image: url(./src/images/hero-bg.png)"
         >
-            <!-- WELCOME TEXT -->
-            <div class="px-8 xl:px-40">
-                <h1 class="text-[38px] font-barlow font-bold lg:text-7xl">
-                    Welcome To Our New Home
-                </h1>
-                <p class="font-manrope pt-4 md:w-2/4 lg:w-1/3">
-                    Where Champions are Forged. Dreams Take FLight and the
-                    Spirit of Football Soars!
-                </p>
-            </div>
+            <!-- Transparent Background  -->
+            <div class="w-full h-full bg-black opacity-50"></div>
 
-            <!-- INDICATORS -->
+            <!-- Text Container -->
             <div
-                class="w-full h-20 mt-[2rem] justify-between items-center px-8 xl:px-40 lg:flex"
+                class="absolute top-0 w-full h-full px-4 pt-[9rem] lg:pt-[15rem] xl:pt-[17rem] lg:px-8 xl:px-20"
             >
-                <!-- INDICATORS CONTAINER -->
-                <div class="flex items-center space-x-4">
-                    <div
-                        class="w-[12px] h-[12px] bg-grayDarker rounded-full hover:bg-white cursor-pointer"
-                    ></div>
-                    <div
-                        class="w-[12px] h-[12px] bg-grayDarker rounded-full hover:bg-white cursor-pointer"
-                    ></div>
-                    <div
-                        class="w-[12px] h-[12px] bg-grayDarker rounded-full hover:bg-white cursor-pointer"
-                    ></div>
+                <div class="text-white">
+                    <h1 class="text-[38px] font-barlow font-bold lg:text-7xl">
+                        Welcome To Our New Home
+                    </h1>
+                    <p class="font-manrope pt-4 md:w-2/4 lg:w-1/3">
+                        Where Champions are Forged. Dreams Take FLight and the
+                        Spirit of Football Soars!
+                    </p>
                 </div>
-                <!-- PREV & NEXT BUTTONS -->
-                <div class="hidden space-x-2 lg:flex items-center">
-                    <div
-                        class="prev w-[60px] h-[54px] bg-grayDarker rounded px-[18px] py-[15px] text-black hover:bg-white cursor-pointer"
-                    >
-                        <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            fill="none"
-                            viewBox="0 0 24 24"
-                            stroke-width="1.5"
-                            stroke="currentColor"
-                            class="w-6 h-6"
-                        >
-                            <path
-                                stroke-linecap="round"
-                                stroke-linejoin="round"
-                                d="M15.75 19.5 8.25 12l7.5-7.5"
-                            />
-                        </svg>
+                <!-- INDICATORS AND BUTTONS -->
+                <div
+                    class="w-full h-20 mt-[2rem] justify-between items-center lg:flex"
+                >
+                    <!-- INDICATORS CONTAINER -->
+                    <div class="flex items-center space-x-4">
+                        <div
+                            class="w-[12px] h-[12px] bg-grayDarker rounded-full hover:bg-white cursor-pointer"
+                        ></div>
+                        <div
+                            class="w-[12px] h-[12px] bg-grayDarker rounded-full hover:bg-white cursor-pointer"
+                        ></div>
+                        <div
+                            class="w-[12px] h-[12px] bg-grayDarker rounded-full hover:bg-white cursor-pointer"
+                        ></div>
                     </div>
-                    <div
-                        class="next w-[60px] h-[54px] bg-grayDarker rounded px-[18px] py-[15px] text-black hover:bg-white cursor-pointer"
-                    >
-                        <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            fill="none"
-                            viewBox="0 0 24 24"
-                            stroke-width="1.5"
-                            stroke="currentColor"
-                            class="w-6 h-6"
+                    <!-- PREV & NEXT BUTTONS -->
+                    <div class="hidden space-x-2 lg:flex items-center">
+                        <div
+                            class="prev w-[60px] h-[54px] bg-grayDarker rounded px-[18px] py-[15px] text-black hover:bg-white cursor-pointer"
                         >
-                            <path
-                                stroke-linecap="round"
-                                stroke-linejoin="round"
-                                d="m8.25 4.5 7.5 7.5-7.5 7.5"
-                            />
-                        </svg>
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                fill="none"
+                                viewBox="0 0 24 24"
+                                stroke-width="1.5"
+                                stroke="currentColor"
+                                class="w-6 h-6"
+                            >
+                                <path
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    d="M15.75 19.5 8.25 12l7.5-7.5"
+                                />
+                            </svg>
+                        </div>
+                        <div
+                            class="next w-[60px] h-[54px] bg-grayDarker rounded px-[18px] py-[15px] text-black hover:bg-white cursor-pointer"
+                        >
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                fill="none"
+                                viewBox="0 0 24 24"
+                                stroke-width="1.5"
+                                stroke="currentColor"
+                                class="w-6 h-6"
+                            >
+                                <path
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    d="m8.25 4.5 7.5 7.5-7.5 7.5"
+                                />
+                            </svg>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- MATCH PREVIEW -->
             <div
-                class="scrollContainer absolute -bottom-[25%] overflow-x-scroll no-scrollbar flex w-full mt-[1rem] pl-8 lg:pr-8 xl:px-40 xl:bottom-[5%]"
+                class="absolute -bottom-[30%] flex w-full mt-[1rem] px-4 lg:px-8 xl:px-20 lg:bottom-[4%]"
             >
                 <div
-                    class="min-w-[456px] h-[151px] bg-yellowSecondary rounded-l text-purplePrimary px-8 py-4"
+                    class="scrollContainer overflow-x-scroll no-scrollbar flex rounded-md"
                 >
-                    <h2 class="uppercase text-[20px] font-semibold font-barlow">
-                        Match Review
-                    </h2>
-                    <p class="text-[16px] font-manrope">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Expedita hic animi consequatur cumque laborum
-                        ratione dolores similique architecto excepturi quos
-                    </p>
-                </div>
-                <div
-                    class="min-w-[456px] h-[151px] bg-yellowSecondary border-l-2 border-r-2 border-purplePrimary text-purplePrimary px-8 py-4"
-                >
-                    <h2 class="uppercase text-[20px] font-semibold font-barlow">
-                        Match Review
-                    </h2>
-                    <p class="text-[16px] font-manrope">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Expedita hic animi consequatur cumque laborum
-                        ratione dolores similique architecto excepturi quos
-                    </p>
-                </div>
-                <div
-                    class="min-w-[456px] h-[151px] bg-yellowSecondary rounded-r text-purplePrimary px-8 py-4"
-                >
-                    <h2 class="uppercase text-[20px] font-semibold font-barlow">
-                        Match Review
-                    </h2>
-                    <p class="text-[16px] font-manrope">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Expedita hic animi consequatur cumque laborum
-                        ratione dolores similique architecto excepturi quos
-                    </p>
+                    <!-- Scroll Item 1 -->
+                    <div
+                        class="w-full min-w-[300px] bg-yellowSecondary rounded-l text-purplePrimary px-8 py-4 lg:min-w-[400px]"
+                    >
+                        <h2
+                            class="uppercase text-[20px] font-semibold font-barlow"
+                        >
+                            Match Review
+                        </h2>
+                        <p class="text-[16px] font-manrope">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Expedita hic animi consequatur cumque laborum
+                            ratione
+                        </p>
+                    </div>
+                    <!-- Scroll Item 2 -->
+                    <div
+                        class="w-full min-w-[300px] bg-yellowSecondary border-l-2 border-purplePrimary text-purplePrimary px-8 py-4 lg:min-w-[400px]"
+                    >
+                        <h2
+                            class="uppercase text-[20px] font-semibold font-barlow"
+                        >
+                            Match Review
+                        </h2>
+                        <p class="text-[16px] font-manrope">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Expedita hic animi consequatur cumque laborum
+                            ratione
+                        </p>
+                    </div>
+                    <!-- Scroll Item 3 -->
+                    <div
+                        class="w-full min-w-[300px] bg-yellowSecondary border-l-2 border-r-2 border-purplePrimary text-purplePrimary px-8 py-4 lg:min-w-[400px]"
+                    >
+                        <h2
+                            class="uppercase text-[20px] font-semibold font-barlow"
+                        >
+                            Match Review
+                        </h2>
+                        <p class="text-[16px] font-manrope">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Expedita hic animi consequatur cumque laborum
+                            ratione
+                        </p>
+                    </div>
+                    <!-- Scroll Item 4 -->
+                    <div
+                        class="w-full min-w-[300px] bg-yellowSecondary rounded-r text-purplePrimary px-8 py-4 lg:min-w-[400px]"
+                    >
+                        <h2
+                            class="uppercase text-[20px] font-semibold font-barlow"
+                        >
+                            Match Review
+                        </h2>
+                        <p class="text-[16px] font-manrope">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Expedita hic animi consequatur cumque laborum
+                            ratione
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <!-- MATCH TIME 🕜🕖🕗 SECTION -->
+        <!-- ============ MATCH TIME 🕜🕖🕗 SECTION ========== -->
         <section
-            class="w-full px-8 mt-[10rem] xl:mt-[6rem] xl:px-40 justify-between lg:flex"
+            class="w-full px-4 mt-[10rem] xl:mt-[6rem] lg:px-8 xl:px-20 justify-between lg:flex"
         >
             <div
                 class="w-full flex items-center justify-between md:justify-normal md:space-x-8 lg:space-x-[2rem]"
@@ -397,8 +432,8 @@
             </div>
         </section>
 
-        <!-- FIXTURES -->
-        <section class="w-full px-8 my-[2rem] xl:px-40">
+        <!-- ============ FIXTURES ============================= -->
+        <section class="w-full px-4 my-[2rem] lg:px-8 xl:px-20">
             <div
                 class="scrollContainer2 w-full overflow-x-scroll no-scrollbar flex space-x-4"
             >
@@ -769,9 +804,9 @@
             </div>
         </section>
 
-        <!-- LATEST NEWS SECTION -->
+        <!-- ============ LATEST NEWS SECTION ================== -->
         <section
-            class="w-full my-[2rem] bg-grayDarker p-8 lg:py-[5rem] xl:px-40 lg:my-[8rem]"
+            class="w-full my-[2rem] bg-grayDarker py-8 px-4 lg:py-[5rem] lg:px-8 xl:px-20 lg:my-[8rem]"
         >
             <div class="lg:flex items-center justify-between">
                 <h2
@@ -1035,8 +1070,8 @@
             </div>
         </section>
 
-        <!-- OUR HISTORY SECTION -->
-        <section class="w-full px-8 xl:px-40">
+        <!-- ============ OUR HISTORY SECTION ================== -->
+        <section class="w-full px-4 lg:px-8 xl:px-20">
             <div class="text-center">
                 <h2
                     class="font-barlow uppercase font-semibold text-purplePrimary text-[24px] lg:text-[58.3px]"
@@ -1063,9 +1098,9 @@
             </div>
         </section>
 
-        <!-- PLAYERS SECTION -->
+        <!-- ============ PLAYERS SECTION ====================== -->
         <section
-            class="w-full mt-[2rem] bg-purpleBright p-8 lg:pt-[5rem] lg:pb-[2rem] xl:px-40 lg:mt-[8rem]"
+            class="w-full mt-[2rem] bg-purpleBright py-8 px-4 lg:pt-[5rem] lg:pb-[2rem] lg:px-8 xl:px-20 lg:mt-[8rem]"
         >
             <div class="lg:flex items-center justify-between">
                 <h2
@@ -1285,9 +1320,9 @@
             </div>
         </section>
 
-        <!-- FOOTER SECTION -->
+        <!-- ============ FOOTER SECTION ======================= -->
         <section
-            class="hidden w-full bg-purplePrimary px-8 pt-[12rem] pb-[6rem] xl:px-40 lg:block"
+            class="hidden w-full bg-purplePrimary pt-[12rem] pb-[6rem] px-8 xl:px-20 lg:block"
         >
             <div class="flex items-center justify-between">
                 <a href="index.html">
@@ -1333,9 +1368,9 @@
             </div>
         </section>
 
-        <!-- ===== MOBILE FOOTER ====== -->
+        <!-- ============ MOBILE FOOTER ======================== -->
         <section
-            class="w-full px-8 bg-purplePrimary pt-[5rem] pb-[6rem] lg:hidden"
+            class="w-full px-4 bg-purplePrimary pt-[5rem] pb-[6rem] lg:hidden"
         >
             <div class="w-[81px] h-[81px] mx-auto">
                 <a href="index.html">
