Update the Team page

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         Welcome To Our New Home
                     </h1>
                     <p class="font-manrope pt-4 md:w-2/4 lg:w-1/3">
-                        Where Champions are Forged. Dreams Take FLight and the
+                        Where Champions are Forged. Dreams Take Flight and the
                         Spirit of Football Soars!
                     </p>
                 </div>
@@ -1102,6 +1102,7 @@
         <section
             class="w-full mt-[2rem] bg-purpleBright py-8 px-4 lg:pt-[5rem] lg:pb-[2rem] lg:px-8 xl:px-20 lg:mt-[8rem]"
         >
+            <!-- Flex Container -->
             <div class="lg:flex items-center justify-between">
                 <h2
                     class="font-barlow uppercase font-semibold text-white text-[24px] lg:text-[58.3px]"
