Edit match center page

--- a/matches.html
+++ b/matches.html
@@ -305,12 +305,11 @@
                                 class="w-[55px] h-[51px] lg:w-[97.55px] lg:h-[90.78px]"
                             />
                             <!-- Team Name 1 -->
-                            <div class="flex-col">
-                                <div
-                                    class="font-manrope font-bold text-[12px] lg:text-[20.17px]"
-                                >
-                                    Sporting Lagos
-                                </div>
+
+                            <div
+                                class="font-manrope text-center font-bold text-[12px] lg:text-[20.17px]"
+                            >
+                                Sporting Lagos
                             </div>
                         </div>
                     </div>
@@ -501,7 +500,7 @@
                                 <!-- Team Name 1 -->
                                 <div class="flex-col">
                                     <div
-                                        class="font-manrope font-bold text-[12px] lg:text-[20.17px]"
+                                        class="font-manrope text-center font-bold text-[12px] lg:text-[20.17px]"
                                     >
                                         Sporting Lagos
                                     </div>
@@ -594,7 +593,7 @@
                                 <!-- Team Name 1 -->
                                 <div class="flex-col">
                                     <div
-                                        class="font-manrope font-bold text-[12px] lg:text-[20.17px]"
+                                        class="font-manrope text-center font-bold text-[12px] lg:text-[20.17px]"
                                     >
                                         Sporting Lagos
                                     </div>
@@ -697,7 +696,7 @@
                                 <!-- Team Name 1 -->
                                 <div class="flex-col">
                                     <div
-                                        class="font-manrope font-bold text-[12px] lg:text-[20.17px]"
+                                        class="font-manrope text-center font-bold text-[12px] lg:text-[20.17px]"
                                     >
                                         Sporting Lagos
                                     </div>
@@ -790,7 +789,7 @@
                                 <!-- Team Name 1 -->
                                 <div class="flex-col">
                                     <div
-                                        class="font-manrope font-bold text-[12px] lg:text-[20.17px]"
+                                        class="font-manrope text-center font-bold text-[12px] lg:text-[20.17px]"
                                     >
                                         Sporting Lagos
                                     </div>
@@ -883,7 +882,7 @@
                                 <!-- Team Name 1 -->
                                 <div class="flex-col">
                                     <div
-                                        class="font-manrope font-bold text-[12px] lg:text-[20.17px]"
+                                        class="font-manrope text-center font-bold text-[12px] lg:text-[20.17px]"
                                     >
                                         Sporting Lagos
                                     </div>
@@ -976,7 +975,7 @@
                                 <!-- Team Name 1 -->
                                 <div class="flex-col">
                                     <div
-                                        class="font-manrope font-bold text-[12px] lg:text-[20.17px]"
+                                        class="font-manrope text-center font-bold text-[12px] lg:text-[20.17px]"
                                     >
                                         Sporting Lagos
                                     </div>
@@ -1082,7 +1081,7 @@
                                 <!-- Team Name 1 -->
                                 <div class="flex-col">
                                     <div
-                                        class="font-manrope font-bold text-[12px] lg:text-[20.17px]"
+                                        class="font-manrope text-center font-bold text-[12px] lg:text-[20.17px]"
                                     >
                                         Sporting Lagos
                                     </div>
@@ -1175,7 +1174,7 @@
                                 <!-- Team Name 1 -->
                                 <div class="flex-col">
                                     <div
-                                        class="font-manrope font-bold text-[12px] lg:text-[20.17px]"
+                                        class="font-manrope text-center font-bold text-[12px] lg:text-[20.17px]"
                                     >
                                         Sporting Lagos
                                     </div>
@@ -1268,7 +1267,7 @@
                                 <!-- Team Name 1 -->
                                 <div class="flex-col">
                                     <div
-                                        class="font-manrope font-bold text-[12px] lg:text-[20.17px]"
+                                        class="font-manrope text-center font-bold text-[12px] lg:text-[20.17px]"
                                     >
                                         Sporting Lagos
                                     </div>
