Add Fixtures Page

--- a/matches.html
+++ b/matches.html
@@ -195,11 +195,11 @@
                     class="overflow-x-scroll no-scrollbar text-center flex items-center justify-between px-8 py-2 text-white bg-purpleBright uppercase font-barlow text-[15px] lg:text-[28px]"
                 >
                     <a
-                        href="#latest-results"
+                        href="matches.html"
                         class="hover:text-purpleLight text-nowrap"
                         >Latest Results</a
                     >
-                    <a href="#fixtures" class="hover:text-purpleLight"
+                    <a href="fixtures.html" class="hover:text-purpleLight"
                         >Fixtures</a
                     >
                     <a href="#table" class="hover:text-purpleLight">Table</a>
