--- a/fixtures.html
+++ b/fixtures.html
@@ -175,7 +175,7 @@
             >
                 <div class="text-white">
                     <h1 class="text-[38px] font-barlow font-bold lg:text-7xl">
-                        Match Center
+                        Match Fixtures
                     </h1>
                     <p class="font-manrope pt-4 md:w-2/4 lg:w-1/3">
                         <!-- It is a long established fact that a reader will be
@@ -368,7 +368,7 @@
         </section>
 
         <!-- ================= OCTOBER FIXTURES SECTION ==================== -->
-        <section class="w-full px-4 py-[3rem] lg:px-8 xl:px-20">
+        <section class="w-full px-4 pt-[3rem] lg:px-8 xl:px-20">
             <h2
                 class="font-barlow uppercase font-semibold text-purplePrimary mb-[1rem] text-[24px] lg:text-[58.3px]"
             >
@@ -914,7 +914,7 @@
         </section>
 
         <!-- ================= DECEMBER FIXTURES SECTION ==================== -->
-        <section class="w-full px-4 py-[3rem] lg:px-8 xl:px-20">
+        <section class="w-full px-4 lg:px-8 xl:px-20">
             <h2
                 class="font-barlow uppercase font-semibold text-purplePrimary mb-[1rem] text-[24px] lg:text-[58.3px]"
             >
