--- a/matches.html
+++ b/matches.html
@@ -175,7 +175,7 @@
             >
                 <div class="text-white">
                     <h1 class="text-[38px] font-barlow font-bold lg:text-7xl">
-                        Match Fixtures
+                        Match Center
                     </h1>
                     <p class="font-manrope pt-4 md:w-2/4 lg:w-1/3">
                         <!-- It is a long established fact that a reader will be
