--- a/matches.html
+++ b/matches.html
@@ -215,7 +215,7 @@
             <div
                 class="w-[156.56px] flex justify-center border-2 border-grey200 rounded-md px-4 py-2 text-[12px] lg:text-[14px] lg:w-[200px]"
             >
-                <select>
+                <select class="bg-white">
                     <option value="0">All Competitions</option>
                     <option value="1">Champions Cup</option>
                     <option value="2">Charity Cup</option>
@@ -226,7 +226,7 @@
             <div
                 class="w-[156.56px] flex justify-center border-2 border-grey200 rounded-md px-4 py-2 text-[12px] lg:text-[14px] lg:w-[200px]"
             >
-                <input type="date" id="date" name="date" />
+                <input type="date" id="date" name="date" class="bg-white" />
             </div>
         </section>
 
